Added chocolate-cupcakes recipe

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/fall-apart-pork.html">Fall Apart Pork</a>
+    <a href="recipes/chocolate-cupcakes.html">Chocolate Cupcakes</a>
 </body>
 </html>
