--- a/recipes/chocolate-cupcakes.html
+++ b/recipes/chocolate-cupcakes.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Chocolate Cupcakes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
+    <a href="../index.html">back</a>
     <h1>Chocolate Cupcakes</h1>
     <img src="../images/chocolate-cupcakes.jpg" alt="recipe foto">
 
