--- a/recipes/fall-apart-pork.html
+++ b/recipes/fall-apart-pork.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Fall Apart Pork</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
+    <a href="../index.html">back</a>
     <h1>Fall Apart Pork</h1>
     <img src="../images/fall-apart-pork.jpg" alt="recipe foto">
     
